[package]
name = "chacha-macros"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1.3"
quote = "1.0.9"
syn = { version = "1.0.60", features = ["parsing", "proc-macro", "derive", "full"] }
unicode-xid = "0.2.1"
pmutil = "0.5.3"
proc-macro2 = { version = "1.0.24" }
