[package]
name = "chacha-reactive"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chacha-macros = { path = "../macros" }
chacha-core = { path = "../core" }
